# python_shape_stats

./: .gitignore  LICENSE  README.md  README_pypi.md  do_shape_pca.py  pyproject.toml  setup.cfg
demos/: 2B_PLS.py  how_many_pcs.ipynb  pls_hypothesis_test.py  principal_components_analysis.py
demos/scripts/: principal_components_analysis.py
docs/: .nojekyll.rtf  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  python_shape_stats.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/python_shape_stats/: helpers.html  inlier_processes.html  procrustes.html  statistical_shape_models.html
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_sources/cookbooks/Principal Components Analysis/: statistical_shape_modelling_with_pca.ipynb.txt
docs/_sources/cookbooks/Two-Block_PLS/: 2B_PLS.ipynb.txt
docs/_sources/usage/examples/: examples.rst.txt
docs/_sources/usage/examples/notebooks/: principal_components_analysis.ipynb.txt
docs/cookbooks/Principal Components Analysis/: how_many_pcs.html  how_many_pcs.ipynb  statistical_shape_modelling_with_pca.html  statistical_shape_modelling_with_pca.ipynb
docs/cookbooks/Two-Block_PLS/: 2B_PLS.html  2B_PLS.ipynb
docs/doctrees/: environment.pickle  modules.doctree
docs/html/: .buildinfo  index.html  searchindex.js
docs/html/_modules/python_shape_stats/: helpers.html  inlier_processes.html  statistical_shape_models.html
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/cookbooks/Principal Components Analysis/: how_many_pcs.ipynb
docs/source/usage/: installation.rst
docs/source/usage/examples/notebooks/Principal Components Analysis/: statistical_shape_modelling_with_pca.ipynb
issue_demos/: investigate_2b_PLS_bug.py  multiplot_scalar_issues.py
misc/: make_pinnochio.py  slice_sim_pop_faces.py
python_shape_stats/: example_do_pca_on_shapes.rst  helpers.py  numpy_inverse_question.py  procrustes.py  statistical_shape_models.py
src/python_shape_stats/: helpers.py  inlier_processes.py  procrustes.py  statistical_shape_models.py
src/python_shape_stats/data/ssm_1/: Average.mtl  EigVal.txt
tests/: test_helpers.py  test_pca.py  test_plotting.py  test_plotting_PLSHypTest.py  test_pls.py  test_procrustes.py
