[metadata]
name = python_shape_stats
description = A python toolbox for statistical shape analysis
author = Harold Matthews
url = https://github.com/harrymatthews50/python_shape_stats
project_urls =
    Bug Tracker = https://github.com/harrymatthews50/python_shape_stats/issues
    Changelog = https://github.com/harrymatthews50/python_shape_stats/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

