[metadata]
name = python_shape_stats
description = A python toolbox for statistical shape analysis
long_description_content_type = text/markdown
author = Harold Matthews
url = https://github.com/harrymatthews50/python_shape_stats
project_urls =
    Bug Tracker = https://github.com/harrymatthews50/python_shape_stats/issues
    Changelog = https://github.com/harrymatthews50/python_shape_stats/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
  pyvista >= 0.38
  scipy>= 1.10
  scikit-learn>=1.2.1
  pandas>=1.5
  matplotlib>=3.7
  joblib>=1.2
  joblib_progress>=1.0
  tqdm>=4.65
  tk>=0.1
  pillow>=0.9

[options.package_data]
python_shape_stats =src/python_shape_stats/data/*

[options.packages.find]
where = src

